--- a/week_1/jsexample.html
+++ b/week_1/jsexample.html
@@ -4,11 +4,19 @@
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 	<title>Some quick JS Examples</title>
 	<script type="text/javascript">
-		alert("Haldo!");
+		//alert("Haldo!");
+		var name = "Bob";
+		var numCookies = 42;
+		var numChips = 23;
 	</script>
 	
 </head>
 <body>
-	
+<!-- This is a comment -->
+	<script type="text/javascript">
+		//document.write("This is written in JS.");
+		document.write(name + numCookies);
+		document.write(numCookies + numChips);
+	</script>
 </body>
 </html>
